tests/script_errors/double_const/error.txt
Error: 
    2 | const ONE = "two";
      | ^^^^^^^^^^^^^^^^^ Can't define the const `ONE` twice